# LowAir-GS

./: .gitignore  DEV_GUIDE.md  LICENSE  README.md  TECHNICAL_REPORT.md  USER_MANUAL.md  install.sh  计划的仓库结构.txt
apps/demo01_uav_scene_fusion/: CMakeLists.txt  DEV_GUIDE.docx  DEV_GUIDE.md  MainWindow.cpp  README.md  RenderWidget.cpp  RenderWidget.h  TECHNICAL_REPORT.docx  TECHNICAL_REPORT.md  USER_MANUAL.docx  USER_MANUAL.md  install.sh  main.cpp
apps/demo01_uav_scene_fusion/geo/: CoordinateManager.cpp  CoordinateManager.h
apps/demo01_uav_scene_fusion/render/: ObjModelRenderer.cpp  ObjModelRenderer.h  TrajectoryRenderer.cpp  UavRenderer.cpp
apps/demo01_uav_scene_fusion/scene/: SimpleScene.cpp  SimpleScene.h
apps/demo01_uav_scene_fusion/telemetry/: UdpJsonReceiver.cpp  UdpJsonReceiver.h
apps/demo02_static_asset_viewer/: CMakeLists.txt  DEV_GUIDE.docx  DEV_GUIDE.md  MainWindow.cpp  MainWindow.h  README.md  RenderWidget.cpp  RenderWidget.h  TECHNICAL_REPORT.docx  TECHNICAL_REPORT.md  USER_MANUAL.docx  USER_MANUAL.md  install.sh  main.cpp
apps/demo02_static_asset_viewer/asset/: AssimpModelLoader.cpp  AssimpModelLoader.h  ModelAsset.cpp  ModelAsset.h  ModelLoader.cpp  ModelLoader.h
apps/demo02_static_asset_viewer/camera/: OrbitCamera.cpp  OrbitCamera.h
apps/demo02_static_asset_viewer/render/: AxisRenderer.cpp  AxisRenderer.h  BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  GridRenderer.cpp  GridRenderer.h  MeshRenderer.cpp  MeshRenderer.h
apps/demo03_geo_coordinate_alignment/: CMakeLists.txt  DEV_GUIDE.docx  DEV_GUIDE.md  MainWindow.cpp  MainWindow.h  README.md  RenderWidget.cpp  RenderWidget.h  TECHNICAL_REPORT.docx  TECHNICAL_REPORT.md  USER_MANUAL.docx  USER_MANUAL.md  install.sh  main.cpp
apps/demo03_geo_coordinate_alignment/camera/: OrbitCamera.cpp  OrbitCamera.h
apps/demo03_geo_coordinate_alignment/config/: demo03_geo_config.json
apps/demo03_geo_coordinate_alignment/geo/: CoordinateTransformer.cpp  GeoCoordinate.h
apps/demo03_geo_coordinate_alignment/render/: GeoSceneRenderer.cpp  GeoSceneRenderer.h  TrajectoryRenderer.cpp  TrajectoryRenderer.h  UavMarkerRenderer.cpp  UavMarkerRenderer.h
apps/demo03_geo_coordinate_alignment/telemetry/: GeoUavState.h  UdpWgs84Receiver.cpp  UdpWgs84Receiver.h
apps/demo04_mavlink_telemetry_viewer/: CMakeLists.txt  DEV_GUIDE.docx  DEV_GUIDE.md  MainWindow.cpp  MainWindow.h  README.md  RenderWidget.cpp  RenderWidget.h  TECHNICAL_REPORT.docx  TECHNICAL_REPORT.md  USER_MANUAL.docx  USER_MANUAL.md  install.sh  main.cpp
apps/demo04_mavlink_telemetry_viewer/camera/: OrbitCamera.cpp  OrbitCamera.h
apps/demo04_mavlink_telemetry_viewer/config/: demo04_mavlink_config.json
apps/demo04_mavlink_telemetry_viewer/geo/: CoordinateTransformer.h  Wgs84Converter.cpp  Wgs84Converter.h
apps/demo04_mavlink_telemetry_viewer/render/: TelemetrySceneRenderer.cpp  TelemetrySceneRenderer.h  TrajectoryRenderer.cpp  TrajectoryRenderer.h  UavMarkerRenderer.cpp  UavMarkerRenderer.h
apps/demo04_mavlink_telemetry_viewer/telemetry/: DroneTelemetryState.h  MavlinkRawTelemetrySource.cpp  MavlinkRawTelemetrySource.h  TelemetryRecorder.cpp  TelemetryRecorder.h  TelemetrySource.h
apps/demo05_gaussian_splat_viewer/: CMakeLists.txt  DEV_GUIDE.docx  DEV_GUIDE.md  MainWindow.cpp  MainWindow.h  README.md  RenderWidget.cpp  RenderWidget.h  TECHNICAL_REPORT.docx  TECHNICAL_REPORT.md  USER_MANUAL.docx  USER_MANUAL.md  install.sh  main.cpp
apps/demo05_gaussian_splat_viewer/config/: demo05_gaussian_config.json
apps/demo05_gaussian_splat_viewer/gaussian/: GaussianPlyLoader.h  GaussianSplatLoader.cpp  GaussianSplatLoader.h
apps/demo05_gaussian_splat_viewer/perf/: FpsCounter.h
apps/demo05_gaussian_splat_viewer/render/: AxisRenderer.h  GaussianBillboardRenderer.cpp  GaussianBillboardRenderer.h  GaussianPointRenderer.cpp  GaussianPointRenderer.h  GridRenderer.cpp
apps/demo06_dual_scene_fusion/: CMakeLists.txt  DEV_GUIDE.docx  DEV_GUIDE.md  MainWindow.cpp  MainWindow.h  README.md  RenderWidget.cpp  RenderWidget.h  TECHNICAL_REPORT.docx  TECHNICAL_REPORT.md  USER_MANUAL.docx  USER_MANUAL.md  install.sh  main.cpp
apps/demo06_dual_scene_fusion/camera/: OrbitCamera.cpp  OrbitCamera.h
apps/demo06_dual_scene_fusion/config/: demo06_fusion_config.json
apps/demo06_dual_scene_fusion/fusion/: FusionConfig.cpp  FusionConfig.h  FusionLayerController.cpp  FusionLayerController.h  FusionMetrics.cpp  FusionMetrics.h  FusionTransform.cpp  FusionTransform.h
apps/demo06_dual_scene_fusion/gaussian/: GaussianBillboardRenderer.cpp  GaussianBillboardRenderer.h  GaussianCloud.cpp  GaussianCloud.h  GaussianPlyLoader.cpp  GaussianPoint.h
apps/demo06_dual_scene_fusion/mesh/: AssimpMeshLoader.cpp  AssimpMeshLoader.h  MeshAsset.h  MeshLoader.h  MeshRenderer.cpp  MeshRenderer.h
apps/demo06_dual_scene_fusion/render/: AxisRenderer.cpp  BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  GridRenderer.h
apps/demo07_game_event_evaluation/: CMakeLists.txt  DEV_GUIDE.docx  DEV_GUIDE.md  MainWindow.cpp  MainWindow.h  README.md  RenderWidget.cpp  RenderWidget.h  TECHNICAL_REPORT.docx  TECHNICAL_REPORT.md  USER_MANUAL.docx  USER_MANUAL.md  install.sh  main.cpp
apps/demo07_game_event_evaluation/config/: demo07_game_config.json
apps/demo07_game_event_evaluation/effects/: Effect.cpp  Effect.h  GlowEffectRenderer.cpp  GlowEffectRenderer.h  LabelPopup.cpp  LabelPopup.h  ParticleEffectRenderer.cpp  ParticleEffectRenderer.h  VirtualExplosionEffect.h  VirtualExplosionRenderer.cpp  VirtualExplosionRenderer.h
apps/demo07_game_event_evaluation/event/: EventEngine.cpp  EventEngine.h  EventRecord.cpp  EventRecord.h  EventTimeline.cpp  EventTimeline.h
apps/demo07_game_event_evaluation/mission/: MissionConfig.cpp  MissionConfig.h  MissionLoader.cpp  MissionLoader.h  MissionState.cpp  MissionState.h  TriggerZone.cpp  TriggerZone.h  VirtualTarget.cpp  VirtualTarget.h
apps/demo07_game_event_evaluation/perf/: FpsCounter.cpp
apps/demo07_game_event_evaluation/render/: AxisRenderer.cpp  (+13 more)
apps/uav_scene_fusion_qt/: CMakeLists.txt  MainWindow.h  README.md  RenderWidget.cpp  RenderWidget.h
(+58 files in other folders)
